Updates chapter2.md
Auto commit by GitBook Editor